# charging-system-b2b

./: .gitignore  manage.py  pyproject.toml
charging_system_b2b/: .env.sample  asgi.py  celery.py  health_check.py  settings.py  urls.py  wsgi.py
charging_system_b2b/middlewares/: __init__.py  idempotency.py  rate_limit.py  request_log.py
charging_system_b2b/utils/: celery.py  model_log_record.py  pagination.py  queryset_response.py
charging_system_b2b/utils/exceptions/: exceptions.py
charging_system_b2b/utils/exports/: csv.py  excel.py
charging_system_b2b/utils/filters/: __init__.py  django_filter_backend.py
charging_system_b2b/utils/models/: __init__.py  base_model.py  with_log_model.py
charging_system_b2b/utils/permissions/: is_owner_or_read_only.py  role_has_permission.py
charging_system_b2b/utils/serializers/: __init__.py  base_model_serializer.py  with_log_serializer.py
charging_system_b2b/utils/views/: __init__.py  base_model_view.py  with_log_model_view.py
customer/: urls.py
customer/migrations/: 0002_alter_customer_current_balance_and_more.py
customer/models/: customer.py
customer/serializers/: customer.py
customer/services/: customer.py
customer/tests/: test_endpoints.py
customer/views/: customer.py
transaction/: urls.py
transaction/admin/: transaction.py
transaction/migrations/: 0001_initial.py
transaction/models/: transaction.py
transaction/serializers/: transaction.py
transaction/services/: transaction.py
transaction/views/: transaction.py
